--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,3 @@
-/* Reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
 /* General */
 :root{
   --main-color: #f5df4d; /*-Yellow-*/
@@ -61,9 +16,6 @@ table {
   :root{
     --logo-width: 300px;
   }
-}
-*{
-  box-sizing: border-box;
 }
 html,body{
   font-family: var(--font1);
@@ -118,12 +70,12 @@ img{
   max-width: 100%;
   height:auto;
 }
-.container{
+/* .container{
   width:100%;
   max-width: 100%;
   margin:0 auto;
   padding: 0 15px;
-}
+} */
 .btn{
   padding: 10px 25px;
   background-color: var(--main-color);
@@ -391,13 +343,17 @@ body{
   overflow: hidden;
   width: 100%;
 }
-#slider .slider-container{
+#slider #my-carousel,
+#slider #my-carousel .carousel-inner{
   position: relative;
   width:100vw;
   max-width: inherit;
   height: calc(90vh - 75px);
 }
-#slider .item{
+#slider .carousel-item{
+  height: calc(90vh - 75px);
+}
+/* #slider .carousel-item{
   position: absolute;
   width: 100%;
   height: 100%;
@@ -405,13 +361,12 @@ body{
   overflow: hidden;
   top:0;
   left:0;
-  opacity: 0;
-  transition: var(--animation-time);
+  transition: var(--animation-time); 
   display: flex;
   justify-content: center;
   align-items: center;
-}
-#slider .item::before{
+} */
+#slider .carousel-item::before{
   content:"";
   background-color: rgba(15,17,22,0.7);
   display: block;
@@ -420,10 +375,10 @@ body{
   left:0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 3;
 }
-#slider .item img,
-#slider .item iframe{
+#slider .carousel-item img,
+#slider .carousel-item iframe{
   position: absolute;
   top:50%;
   left:50%;
@@ -433,13 +388,16 @@ body{
   max-width: inherit;
   max-height: inherit;
 }
-#slider .item p{
+#slider .carousel-item p{
   color:var(--light);
 }
-#slider .item h2{
+#slider .carousel-item h2{
   color:var(--main-color);
 }
-#slider .input-slide{
+#slider .carousel-indicators {
+  bottom: 10%;
+}
+/* #slider .input-slide{
   position:absolute;
   bottom:80px;
   transform: translateX(-50%);
@@ -455,14 +413,25 @@ body{
   border-radius:50%;
   z-index: 5;
   box-shadow: 0 0 5px var(--light);
-}
+} */
 #slider .text-wrapper{
   z-index: 4;
+  position: relative; 
+  text-align:center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
+  overflow: hidden;
+  top:0;
+  left:0;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative; 
-  text-align:center;
+}
+#slider .carousel-control-prev,
+#slider .carousel-control-next{
+  z-index: 4;
 }
 #slider #input-slide-1{
   left:calc(50% - 30px);
@@ -473,10 +442,10 @@ body{
 #slider .input-slide:checked{
   background-color: var(--main-color);
 }
-#slider .input-slide:checked + .item{
+/* #slider .input-slide:checked + .item{
   opacity: 1;
   transition:var(--animation-time);
-}
+} */
 
 /* Skills */
 
