listo index con bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ input#mobile-menu:checked + label::after{
   width:var(--logo-width);
   display: flex;
   align-items: center;
+  margin-top: 1rem;
 }
 #navigation nav{
   width:calc(100% - var(--logo-width));
@@ -198,7 +199,7 @@ input#mobile-menu:checked + label::after{
   background-color:var(--secondary-color);
   align-items: flex-start;
   justify-content: center;
-  top:53px;
+  top:75px;
   z-index: 99;
   transition: var(--transition-time);
 }
@@ -259,18 +260,21 @@ body{
 }
 @media screen and (min-width:992px){
   body{
-    padding-top: 77px;
+    padding-top: 103px;
   }
   #navigation nav{
-    top:77px;
+    top:103px;
+  }
+  #navigation nav > ul{
+    margin-top:1rem;
   }
 }
 @media screen and (min-width:1200px){
   body{
-    padding-top: 77px;
+    padding-top: 103px;
   }
   #navigation nav{
-    top:77px;
+    top:103px;
   }
   #navigation nav{
     display: flex;
@@ -604,10 +608,10 @@ body{
   text-align: center;
 }
 #contacto form{
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content:center;
+  justify-content:center; */
   margin-top:3rem;
 }
 #contacto input{
@@ -618,7 +622,7 @@ body{
   font-size:1rem;
   box-shadow: 0 0 10px rgba(0,0,0,.2);
   vertical-align: middle;
-  flex-basis:100%;
+  /* flex-basis:100%; */
   padding:2rem;
   border-bottom:3px solid var(--light);
 }
@@ -637,7 +641,7 @@ body{
   font-size: 20px;
   letter-spacing: 0.1em;
   font-style: normal;
-  flex-basis:300px;
+  /* flex-basis:300px; */
   margin-top:20px;
   transition: var(--transition-time);
   border:none;
@@ -647,11 +651,11 @@ body{
   background-color: var(--secondary-color);
   color:var(--dark);
 }
-@media screen and (min-width:575px){
+/* @media screen and (min-width:575px){
   #contacto input{
     flex-basis:50%;
   }
-}
+} */
 /* Blog */
 #blog{
   padding: 5rem 0 9rem;
@@ -691,14 +695,14 @@ body{
 }
 #blog .box-left,
 #blog .box-right{
-  flex-basis:100%;
+  /* flex-basis:100%; */
   margin-bottom:2rem;
   position:relative;
 }
 @media screen and (min-width:1200px){
   #blog .box-left,
   #blog .box-right{
-    flex-basis:50%;
+    /* flex-basis:50%; */
     margin-bottom: 0;
   }
   #blog .box-left{
@@ -710,7 +714,7 @@ body{
 }
 #blog .box-left .single-article{
   padding-right: 1rem;
-  display: flex;
+  /* display: flex; */
   position:relative;
   height: 100%;
 }
